install bootstrap and navbar

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,6 +1,1 @@
-body {
-  background-color: #3498db;
-}
-body h1 {
-  color: #fff;
-}/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
