--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,6 +1,8 @@
-body {
-  background-color: #3498db;
-  h1 {
-    color: #fff;
-  }
-}
+$purple: #563ad6;
+$aqua: #3abad6;
+$navy: #02044a;
+$white: #fff;
+$softpur: #eaeaf4;
+$darpur: #777790;
+$medpur: #b4b5c9;
+$lilpur: #f9f9fb;
