--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,6 +1,17 @@
+body {
+  font-family: "Rubik", sans-serif;
+}
+
 .navbar-tp {
   padding-top: 30px;
 }
+.navbar-tp .navbar-nav li {
+  padding-left: 50px;
+}
 .navbar-tp .navbar-nav .active {
   color: #563ad6 !important;
+  font-weight: 600;
+}
+.navbar-tp .navbar-nav .nav-link {
+  color: #02044a;
 }/*# sourceMappingURL=main.css.map */
