--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -7,11 +7,22 @@ $darpur: #777790;
 $medpur: #b4b5c9;
 $lilpur: #f9f9fb;
 
+body{
+    font-family: 'Rubik', sans-serif;
+}
+
 .navbar-tp{
     padding-top: 30px;
     .navbar-nav{
+        li{
+            padding-left: 50px;
+        }
         .active{
             color: $purple !important;
+            font-weight: 600;
+        }
+        .nav-link{
+            color: $navy;
         }
     }
 }
