--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -6,23 +6,28 @@ $softpur: #eaeaf4;
 $darpur: #777790;
 $medpur: #b4b5c9;
 $lilpur: #f9f9fb;
-
-body{
-    font-family: 'Rubik', sans-serif;
+$font-weights: (
+  "regular": 400,
+  "medium": 500,
+  "semiBold": 600,
+);
+body {
+  font-family: "Rubik", sans-serif;
 }
 
-.navbar-tp{
-    padding-top: 30px;
-    .navbar-nav{
-        li{
-            padding-left: 50px;
-        }
-        .active{
-            color: $purple !important;
-            font-weight: 600;
-        }
-        .nav-link{
-            color: $navy;
-        }
+.navbar-tp {
+  padding-top: 30px;
+  .navbar-nav {
+    li {
+      padding-left: 50px;
     }
+    .active {
+      color: $purple !important;
+      font-weight: map-get($map: $font-weights, $key: medium) !important;
+    }
+    .nav-link {
+      color: $navy;
+      font-weight: map-get($map: $font-weights, $key: regular) 
+    }
+  }
 }
