--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -15,4 +15,24 @@ body {
 .navbar-tp .navbar-nav .nav-link {
   color: #02044a;
   font-weight: 400;
+}
+
+.sales .copywriting .header {
+  font-weight: 600;
+  color: #02044a;
+  font-size: 46px;
+  line-height: 60px;
+}
+.sales .copywriting .description {
+  font-weight: 400;
+  color: #777790;
+  font-size: 18px;
+  line-height: 30px;
+}
+.sales .copywriting .button .btn-primary {
+  background-color: #563ad6;
+}
+.sales .copywriting .button .btn-secondary {
+  background-color: #f9f9fb;
+  color: #777790;
 }/*# sourceMappingURL=main.css.map */
