--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -11,6 +11,7 @@ $font-weights: (
   "medium": 500,
   "semiBold": 600,
 );
+
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -30,4 +31,30 @@ body {
       font-weight: map-get($map: $font-weights, $key: regular) 
     }
   }
+}
+
+.sales{
+    .copywriting{
+        .header{
+            font-weight: map-get($map: $font-weights, $key: semiBold);
+            color: $navy;
+            font-size: 46px;
+            line-height: 60px; 
+        }
+        .description{
+            font-weight: map-get($map: $font-weights, $key: regular);
+            color: $darpur;
+            font-size: 18px;
+            line-height: 30px;
+        }
+        .button{
+            .btn-primary{
+                background-color: $purple;
+            }
+            .btn-secondary{
+                background-color: $lilpur;
+                color: $darpur;
+            }
+        }
+    }
 }
