--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -6,6 +6,7 @@ $softpur: #eaeaf4;
 $darpur: #777790;
 $medpur: #b4b5c9;
 $lilpur: #f9f9fb;
+$newpur: #9B9CB7;
 $font-weights: (
   "regular": 400,
   "medium": 500,
@@ -14,6 +15,25 @@ $font-weights: (
 
 body {
   font-family: "Rubik", sans-serif;
+}
+
+.btn-master{
+  padding: 15px 26px;
+  border-radius: 10px;
+  font-weight: map-get($map: $font-weights, $key: semiBold) ;
+  border: 0px;
+}
+
+.btn-primary{
+  @extend .btn-master;
+  background-color: $purple;
+  color: $white;
+}
+
+.btn-secondary{
+  @extend .btn-master;
+  background-color: $lilpur;
+  color: $darpur;
 }
 
 .navbar-tp {
@@ -43,18 +63,9 @@ body {
         }
         .description{
             font-weight: map-get($map: $font-weights, $key: regular);
-            color: $darpur;
-            font-size: 18px;
+            color: $newpur;
+            font-size: 16px;
             line-height: 30px;
-        }
-        .button{
-            .btn-primary{
-                background-color: $purple;
-            }
-            .btn-secondary{
-                background-color: $lilpur;
-                color: $darpur;
-            }
         }
     }
 }
