--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -12,10 +12,12 @@ body {
     li {
       padding-left: 50px;
     }
+
     .active {
       color: $purple !important;
       font-weight: map-get($map: $font-weights, $key: medium) !important;
     }
+
     .nav-link {
       color: $navy;
       font-weight: map-get($map: $font-weights, $key: regular);
@@ -25,6 +27,15 @@ body {
 
 .sales {
   padding-top: 100px;
+
+  .brand {
+    margin-top: 50px;
+    text-align: center;
+    .brand-logos {
+      width: 724px;
+    }
+  }
+
   .copywriting {
     padding-left: 100px;
     .header {
@@ -34,6 +45,7 @@ body {
       line-height: 60px;
       margin-top: 100px;
     }
+
     .description {
       font-weight: map-get($map: $font-weights, $key: regular);
       color: $newpur;
