--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -19,6 +19,29 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
+.header {
+  font-weight: 600;
+  color: #02044a;
+  font-size: 46px;
+  line-height: 60px;
+  margin-top: 100px;
+}
+
+.description {
+  font-weight: 400;
+  color: #9b9cb7;
+  font-size: 16px;
+  line-height: 30px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.pricing {
+  background-color: #f9f9fb;
+  padding-bottom: 70px;
+  margin-top: 20px;
+}
+
 .navbar-tp {
   padding-top: 30px;
 }
@@ -46,19 +69,4 @@ body {
 }
 .sales .copywriting {
   padding-left: 100px;
-}
-.sales .copywriting .header {
-  font-weight: 600;
-  color: #02044a;
-  font-size: 46px;
-  line-height: 60px;
-  margin-top: 100px;
-}
-.sales .copywriting .description {
-  font-weight: 400;
-  color: #9b9cb7;
-  font-size: 16px;
-  line-height: 30px;
-  margin-top: 20px;
-  margin-bottom: 40px;
 }/*# sourceMappingURL=main.css.map */
