--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -6,6 +6,30 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
+.header {
+  font-weight: map-get($map: $font-weights, $key: semiBold);
+  color: $navy;
+  font-size: 46px;
+  line-height: 60px;
+  margin-top: 100px;
+}
+
+.description {
+  font-weight: map-get($map: $font-weights, $key: regular);
+  color: $newpur;
+  font-size: 16px;
+  line-height: 30px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.pricing{
+  background-color: $lilpur;
+  // padding-top: 10px;
+  padding-bottom: 70px;
+  margin-top: 20px;
+}
+
 .navbar-tp {
   padding-top: 30px;
   .navbar-nav {
@@ -37,22 +61,6 @@ body {
   }
 
   .copywriting {
-    padding-left: 100px;
-    .header {
-      font-weight: map-get($map: $font-weights, $key: semiBold);
-      color: $navy;
-      font-size: 46px;
-      line-height: 60px;
-      margin-top: 100px;
-    }
-
-    .description {
-      font-weight: map-get($map: $font-weights, $key: regular);
-      color: $newpur;
-      font-size: 16px;
-      line-height: 30px;
-      margin-top: 20px;
-      margin-bottom: 40px;
-    }
+    padding-left: 100px;  
   }
 }
