--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -45,8 +45,50 @@ body {
   padding: 30px;
   border-radius: 22px;
 }
+.pricing .master-card .btn, .pricing .basic-card .btn {
+  width: 100%;
+  margin-top: 20px;
+}
+.pricing .master-card .item-benefit, .pricing .basic-card .item-benefit {
+  margin-bottom: 20px;
+}
+.pricing .master-card .item-benefit p, .pricing .basic-card .item-benefit p {
+  font-size: 16px;
+  font-weight: 500;
+}
+.pricing .master-card .item-benefit img, .pricing .basic-card .item-benefit img {
+  float: left;
+  margin-right: 8px;
+}
+.pricing .master-card .name, .pricing .basic-card .name {
+  font-size: 18px;
+  font-weight: 500;
+}
+.pricing .master-card .price, .pricing .basic-card .price {
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+.pricing .master-card .support, .pricing .basic-card .support {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 40px;
+}
 .pricing .basic-card {
   background-color: #fff;
+}
+.pricing .basic-card .name {
+  color: #02044a;
+}
+.pricing .basic-card .price {
+  color: #02044a;
+}
+.pricing .basic-card .support {
+  color: #9b9cb7;
+}
+.pricing .basic-card .item-benefit p {
+  color: #02044a;
 }
 
 .navbar-tp {
