update card and footer

--- a/assets/style/_button.scss
+++ b/assets/style/_button.scss
@@ -17,3 +17,9 @@
   background-color: $lilpur;
   color: $darpur;
 }
+
+.btn-third{
+  @extend .btn-master;
+  background-color: lightseagreen;
+  color: white;
+}
