--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -31,33 +31,33 @@ body {
   .master-card {
     padding: 30px;
     border-radius: 22px;
-    .btn{
+    .btn {
       width: 100%;
       margin-top: 20px;
     }
-    .item-benefit{
+    .item-benefit {
       margin-bottom: 20px;
-      
-      p{
+
+      p {
         font-size: 16px;
         font-weight: map-get($map: $font-weights, $key: medium);
       }
-      img{
+      img {
         float: left;
         margin-right: 8px;
       }
     }
-    .name{
+    .name {
       font-size: 18px;
       font-weight: map-get($map: $font-weights, $key: medium);
     }
-    .price{
+    .price {
       font-size: 36px;
       font-weight: map-get($map: $font-weights, $key: semiBold);
       margin-top: 16px;
       margin-bottom: 16px;
     }
-    .support{
+    .support {
       font-size: 16px;
       font-weight: map-get($map: $font-weights, $key: regular);
       margin-bottom: 40px;
@@ -66,18 +66,36 @@ body {
   .basic-card {
     @extend .master-card;
     background-color: $white;
-    .name{
+    .name {
       color: $navy;
     }
-    .price{
+    .price {
       color: $navy;
     }
-    .support{
+    .support {
       color: $newpur;
     }
-    .item-benefit{
-      p{
+    .item-benefit {
+      p {
         color: $navy;
+      }
+    }
+  }
+  .most-card {
+    @extend .master-card;
+    background-color: $purple;
+    .name {
+      color: $white;
+    }
+    .price {
+      color: $white;
+    }
+    .support {
+      color: $newpur;
+    }
+    .item-benefit {
+      p {
+        color: $white;
       }
     }
   }
@@ -115,5 +133,31 @@ body {
 
   .copywriting {
     padding-left: 100px;
+  }
+}
+
+footer {
+  position: relative;
+  width: 100%;
+  background: $purple;
+
+  p {
+    color: white;
+    text-align: center;
+    padding: 8px;
+    font-size: 12px;
+    font-weight: map-get($map: $font-weights, $key: regular);
+    margin-bottom: 0px;
+  }
+
+  a {
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
+  }
+
+  a:hover {
+    cursor: pointer;
+    color: red;
   }
 }
