--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,4 +1,4 @@
-.btn-master, .btn-secondary, .btn-primary {
+.btn-master, .btn-third, .btn-secondary, .btn-primary {
   padding: 15px 26px;
   border-radius: 10px;
   font-weight: 600;
@@ -13,6 +13,11 @@
 .btn-secondary {
   background-color: #f9f9fb;
   color: #777790;
+}
+
+.btn-third {
+  background-color: lightseagreen;
+  color: white;
 }
 
 body {
@@ -41,36 +46,36 @@ body {
   padding-bottom: 70px;
   margin-top: 20px;
 }
-.pricing .master-card, .pricing .basic-card {
+.pricing .master-card, .pricing .most-card, .pricing .basic-card {
   padding: 30px;
   border-radius: 22px;
 }
-.pricing .master-card .btn, .pricing .basic-card .btn {
+.pricing .master-card .btn, .pricing .most-card .btn, .pricing .basic-card .btn {
   width: 100%;
   margin-top: 20px;
 }
-.pricing .master-card .item-benefit, .pricing .basic-card .item-benefit {
+.pricing .master-card .item-benefit, .pricing .most-card .item-benefit, .pricing .basic-card .item-benefit {
   margin-bottom: 20px;
 }
-.pricing .master-card .item-benefit p, .pricing .basic-card .item-benefit p {
+.pricing .master-card .item-benefit p, .pricing .most-card .item-benefit p, .pricing .basic-card .item-benefit p {
   font-size: 16px;
   font-weight: 500;
 }
-.pricing .master-card .item-benefit img, .pricing .basic-card .item-benefit img {
+.pricing .master-card .item-benefit img, .pricing .most-card .item-benefit img, .pricing .basic-card .item-benefit img {
   float: left;
   margin-right: 8px;
 }
-.pricing .master-card .name, .pricing .basic-card .name {
+.pricing .master-card .name, .pricing .most-card .name, .pricing .basic-card .name {
   font-size: 18px;
   font-weight: 500;
 }
-.pricing .master-card .price, .pricing .basic-card .price {
+.pricing .master-card .price, .pricing .most-card .price, .pricing .basic-card .price {
   font-size: 36px;
   font-weight: 600;
   margin-top: 16px;
   margin-bottom: 16px;
 }
-.pricing .master-card .support, .pricing .basic-card .support {
+.pricing .master-card .support, .pricing .most-card .support, .pricing .basic-card .support {
   font-size: 16px;
   font-weight: 400;
   margin-bottom: 40px;
@@ -89,6 +94,21 @@ body {
 }
 .pricing .basic-card .item-benefit p {
   color: #02044a;
+}
+.pricing .most-card {
+  background-color: #563ad6;
+}
+.pricing .most-card .name {
+  color: #fff;
+}
+.pricing .most-card .price {
+  color: #fff;
+}
+.pricing .most-card .support {
+  color: #9b9cb7;
+}
+.pricing .most-card .item-benefit p {
+  color: #fff;
 }
 
 .navbar-tp {
@@ -118,4 +138,27 @@ body {
 }
 .sales .copywriting {
   padding-left: 100px;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+  background: #563ad6;
+}
+footer p {
+  color: white;
+  text-align: center;
+  padding: 8px;
+  font-size: 12px;
+  font-weight: 400;
+  margin-bottom: 0px;
+}
+footer a {
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+}
+footer a:hover {
+  cursor: pointer;
+  color: red;
 }/*# sourceMappingURL=main.css.map */
